--- a/FloggitWhiteboardWebClient/package.json
+++ b/FloggitWhiteboardWebClient/package.json
@@ -19,10 +19,13 @@
     "react-modal": "^1.4.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
+    "react-router-redux": "^4.0.6",
     "redux": "^3.6.0",
+    "redux-localstorage": "^0.4.1",
     "redux-logger": "^2.7.0",
     "redux-thunk": "^2.1.0",
-    "socket.io-client": "^1.5.0"
+    "socket.io-client": "^1.5.0",
+    "webpack-stream": "^3.2.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.0.0",
