--- a/FloggitWhiteboardWebClient/package.json
+++ b/FloggitWhiteboardWebClient/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.14.0",
     "babel-polyfill": "^6.16.0",
     "body-parser": "^1.15.2",
+    "classnames": "^2.2.5",
     "ejs": "^2.5.2",
     "express": "^4.14.0",
     "http": "^0.0.0",
